added username in git config

--- a/git/config
+++ b/git/config
@@ -110,3 +110,7 @@
 # Allow local customizations in the .gitconfig_local file
 [include]
 	path = ~/.gitconfig_local
+
+[user]
+    name = Kamal
+    email = kamalgupta308@gmail.com
