--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,3 +9,9 @@
     ~/.ssh/config: ssh/config
     ~/.gitconfig: git/config
     ~/.gitignore_global: git/ignore
+    ~/.ipython/profile_default/ipython_config.py: ipython/ipython_config.py
+    ~/.ipython/profile_default/ipython_kernel_config.py: ipython/ipython_kernel_config.py
+    ~/.ipython/profile_default/startup/disable_warnings.py: ipython/disable_warnings.py
+    ~/.jupyter/jupyter_notebook_config.py: jupyter/jupyter_notebook_config.py
+    ~/.jupyter/nbconfig/notebook.json: jupyter/notebook.json
+
