--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,4 +14,5 @@
     ~/.ipython/profile_default/startup/disable_warnings.py: ipython/disable_warnings.py
     ~/.jupyter/jupyter_notebook_config.py: jupyter/jupyter_notebook_config.py
     ~/.jupyter/nbconfig/notebook.json: jupyter/notebook.json
-
+    ~/.tmux.conf: tmux.conf
+    ~/.vimrc: vimrc 
