--- a/ssh/config
+++ b/ssh/config
@@ -1,30 +1,30 @@
 Host open2
     HostName opensub02.umiacs.umd.edu
     User kampta
-    IdentityFile ~/.ssh/id_rsa
+    IdentityFile ~/.ssh/id_ed25519
 
 Host open3
     HostName opensub03.umiacs.umd.edu
     User kampta
-    IdentityFile ~/.ssh/id_rsa
+    IdentityFile ~/.ssh/id_ed25519
 
 Host vulcan0
     Hostname vulcansub00.umiacs.umd.edu
     User kampta
-    IdentityFile ~/.ssh/id_rsa
+    IdentityFile ~/.ssh/id_ed25519
     ProxyJump openlab.umiacs.umd.edu
     DynamicForward 9090
 
 Host vulcan1
     Hostname vulcansub01.umiacs.umd.edu
     User kampta
-    IdentityFile ~/.ssh/id_rsa
+    IdentityFile ~/.ssh/id_ed25519
     ProxyJump openlab.umiacs.umd.edu
     DynamicForward 9090
 
 Host cml
     Hostname cmlsub00.umiacs.umd.edu
     User kampta
-    IdentityFile ~/.ssh/id_rsa
+    IdentityFile ~/.ssh/id_ed25519
     ProxyJump openlab.umiacs.umd.edu
     DynamicForward 9090
